plugins {
    id "com.diffplug.spotless" version "8.4.0" apply false
    id "org.sonarqube" version "7.3.1.8318"
    id "org.jreleaser" version "1.24.0"
    id "org.owasp.dependencycheck" version "12.2.2"
    id "me.champeau.gradle.jmh" version "0.5.3"
    id 'org.asciidoctor.convert' version '2.4.0'
    id 'idea'
}

ext {
    defaultProjectVersion = findProperty('projectVersion') ?: '1.0.0-SNAPSHOT'
}

apply plugin: 'com.diffplug.spotless'


spotless {
    format 'rootMisc', {
        target '*.gradle',
            '*.md',
            '.editorconfig',
            '.gitattributes',
            '.gitignore',
            '.github/**/*.md',
            'config/**/*.xml',
            'config/**/*.md',
            'docs/**/*.md'

        trimTrailingWhitespace()
        endWithNewline()
    }
}

tasks.named('check') {
    dependsOn 'spotlessCheck'
    dependsOn 'integrationCheck'
}

tasks.register('verifySupplyChainConfiguration') {
    group = 'verification'
    description = 'Checks dependency locking and optional Gradle dependency verification metadata.'
    doLast {
        boolean enforceSupplyChain = providers.gradleProperty('gear4j.enforceSupplyChain')
            .map { it.toBoolean() }
            .orElse(false)
            .get()
        def missing = []
        if (!file('gradle.lockfile').exists()) {
            missing << 'gradle.lockfile (generate with: ./gradlew dependencies --write-locks)'
        }
        if (!file('gradle/verification-metadata.xml').exists()) {
            missing << 'gradle/verification-metadata.xml (bootstrap with: ./gradlew --write-verification-metadata sha256 help)'
        }
        if (!missing.isEmpty() && enforceSupplyChain) {
            throw new GradleException('Supply-chain enforcement is enabled but required files are missing: ' + missing.join(', '))
        }
        missing.each { logger.lifecycle('Optional supply-chain hardening file missing: ' + it) }
    }
}


allprojects {
    apply plugin: 'jacoco'

    dependencyLocking {
        lockAllConfigurations()
    }

    version = rootProject.defaultProjectVersion
    group = 'io.github.gear4jtest'
    description = 'Gear4J Java pipeline orchestration library.'

    repositories {
        mavenCentral()
    }

    jacoco {
        toolVersion = "0.8.14"
    }
}

ext {
    coreProjects = subprojects
}

configure(project.coreProjects) {
    apply plugin: 'java'
    apply plugin: 'maven-publish'
    apply plugin: 'checkstyle'
    apply plugin: 'com.diffplug.spotless'

    spotless {
        java {
            target 'src/*/java/**/*.java'
            targetExclude 'build/**', '**/generated/**'

            importOrder('java|javax', '', '\\#')
            removeUnusedImports()
            eclipse()
                .configFile(rootProject.file('config/formatter/eclipse-java-formatter.xml'))

            formatAnnotations()
        }

        format 'moduleMisc', {
            target '*.gradle',
                '*.md',
                'src/**/*.xml',
                'src/**/*.xsd',
                'src/**/*.sql',
                'src/**/*.properties',
                'src/**/*.kt',
                'src/**/*.groovy'

            trimTrailingWhitespace()
            endWithNewline()
        }
    }

    checkstyle {
        toolVersion = '10.26.1'
        configFile = rootProject.file('config/checkstyle/checkstyle.xml')
        configDirectory.set(rootProject.layout.projectDirectory.dir('config/checkstyle'))
    }

    tasks.withType(Checkstyle).configureEach {
        exclude '**/generated/**'
        reports {
            xml.required = true
            html.required = true
        }
    }

    tasks.withType(Javadoc).configureEach {
        options.encoding = 'UTF-8'
        options.addBooleanOption('Xdoclint:all,-missing', true)
        options.addBooleanOption('quiet', true)
    }

    tasks.named('check') {
        dependsOn 'spotlessCheck'
    }

    dependencies {
        testImplementation(libs.junit)
        testRuntimeOnly(libs.junit.platform.launcher)
        testImplementation(libs.assertj)
    }

    sourceSets {
        integrationTest {
            java.srcDir file('src/integrationTest/java')
            resources.srcDir file('src/integrationTest/resources')
            compileClasspath += sourceSets.main.output + configurations.testRuntimeClasspath
            runtimeClasspath += output + compileClasspath
        }
    }

    configurations {
        integrationTestImplementation.extendsFrom testImplementation
        integrationTestRuntimeOnly.extendsFrom testRuntimeOnly
    }

    test {
        useJUnitPlatform()
    }

    tasks.register('integrationTest', Test) {
        description = 'Runs integration tests. Database-dependent tests use Testcontainers.'
        group = 'verification'
        testClassesDirs = sourceSets.integrationTest.output.classesDirs
        classpath = sourceSets.integrationTest.runtimeClasspath
        useJUnitPlatform()
        shouldRunAfter tasks.named('test')
    }

    jacocoTestReport {
        reports {
            xml.required = true
        }
    }
}

configure(project.coreProjects.findAll { !it.name.contains("gradle") }) {
    apply plugin: 'java-library'
    apply plugin: 'me.champeau.gradle.jmh'
    apply from: "${rootDir}/publishing.gradle"

    dependencies {
        testImplementation(libs.junit)
        testImplementation(libs.assertj)
        testImplementation(libs.logback)
        testImplementation(libs.mockito)
        testImplementation(libs.mockito.junit)
        testImplementation(libs.postgresql)

        integrationTestImplementation(libs.testcontainers.junit.jupiter)
        integrationTestImplementation(libs.testcontainers.postgresql)
        integrationTestImplementation(libs.testcontainers.mysql)
        integrationTestImplementation(libs.testcontainers.mariadb)
        integrationTestImplementation(libs.testcontainers.oracle.xe)
        integrationTestRuntimeOnly(libs.postgresql)
        integrationTestRuntimeOnly(libs.mysql)
        integrationTestRuntimeOnly(libs.mariadb)
        integrationTestRuntimeOnly(libs.ojdbc11)
        integrationTestRuntimeOnly(libs.h2)
    }

    tasks.withType(JavaCompile) {
        sourceCompatibility = JavaVersion.VERSION_17
        targetCompatibility = JavaVersion.VERSION_17
        options.deprecation = true
        options.encoding = 'UTF-8'
        options.compilerArgs += ["-Xlint:unchecked", "-parameters"]
    }

    afterEvaluate {
        jar {
            inputs.property('moduleName', moduleName)
            manifest.attributes(
                'Automatic-Module-Name': moduleName
            )
        }
    }

    test {
        if (project.hasProperty('dumpLambdaProxies')) {
            systemProperty "jdk.internal.lambda.dumpProxyClasses", "${buildDir}/lambda-proxies"
        }
    }
}

configure(project.coreProjects.findAll { it.name.contains("gradle") }) {
    apply plugin: 'groovy-gradle-plugin'
}

def allTestCoverageFile = "${rootProject.projectDir}/build/reports/jacoco/report.xml"


sonar {
    properties {
        property "sonar.host.url", "https://sonarcloud.io"
        property "sonar.organization", "gear4jtest"
        property "sonar.projectName", "gear4jtest"
        property "sonar.projectKey", "gear4jtest_gear4jtest"
        property "sonar.links.homepage", "https://github.com/gear4jtest/gear4jtest"
        property "sonar.links.ci", "https://github.com/gear4jtest/gear4jtest/actions"
        property "sonar.links.scm", "https://github.com/gear4jtest/gear4jtest"
        property "sonar.links.issue", "https://github.com/gear4jtest/gear4jtest/issues"
        property "sonar.coverage.jacoco.xmlReportPaths", allTestCoverageFile
    }
}


jreleaser {
    configFile = file('jreleaser.yml')
}

dependencyCheck {
    failBuildOnCVSS = 9.0
    formats = ['HTML', 'JSON']
    analyzers {
        assemblyEnabled = false
    }
    if (System.getenv('NVD_API_KEY')) {
        nvd {
            apiKey = System.getenv('NVD_API_KEY')
        }
    }
}

tasks.register('stageMavenCentral') {
    group = 'publishing'
    description = 'Stages all Maven publications under build/staging-deploy for JReleaser.'
    dependsOn(coreProjects.findAll { !it.name.contains('gradle') }
            .collect { it.tasks.named('publishAllPublicationsToMavenCentralStagingRepository') })
}

tasks.register('jacocoRootAllReport', JacocoReport) {
    group = 'verification'
    description = 'Generates the root JaCoCo HTML and XML reports for unit and integration tests.'

    dependsOn coreProjects.collect { it.tasks.named('test') }
    dependsOn coreProjects.collect { it.tasks.named('integrationTest') }

    additionalSourceDirs.from(coreProjects.collect { it.sourceSets.main.allSource.srcDirs }.flatten())
    sourceDirectories.from(coreProjects.collect { it.sourceSets.main.allSource.srcDirs }.flatten())
    classDirectories.from(coreProjects.collect { it.sourceSets.main.output })
    executionData.from(coreProjects.collect { testedProject ->
        [
            testedProject.layout.buildDirectory.file('jacoco/test.exec'),
            testedProject.layout.buildDirectory.file('jacoco/integrationTest.exec')
        ]
    }.flatten())

    onlyIf {
        executionData.files.any { it.exists() }
    }

    reports {
        xml.required.set(true)
        xml.outputLocation.set(layout.buildDirectory.file('reports/jacoco/report.xml'))
        html.required.set(true)
        html.outputLocation.set(layout.buildDirectory.dir('reports/jacoco/html'))
        csv.required.set(false)
    }
}

tasks.register('integrationCheck') {
    group = 'verification'
    description = 'Runs integration tests for every module. Database-dependent tests use Testcontainers.'
    dependsOn coreProjects.collect { it.tasks.named('integrationTest') }
}

tasks.register('coverageReport') {
    group = 'verification'
    description = 'Runs unit and integration tests and generates the root JaCoCo HTML and XML reports.'
    dependsOn tasks.named('jacocoRootAllReport')
}

allprojects {
    tasks.matching { it.name == 'build' }.configureEach {
        finalizedBy rootProject.tasks.named('coverageReport')
    }
}

tasks.matching { it.name == 'sonarqube' || it.name == 'sonar' }.configureEach {
    dependsOn tasks.named('coverageReport')
}

tasks.register('releaseCheck') {
    group = 'verification'
    description = 'Runs the checks expected before staging a Maven Central release.'
    dependsOn tasks.named('check'), tasks.named('dependencyCheckAggregate'), tasks.named('verifySupplyChainConfiguration')
}
